--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: LDna
 Type: Package
 Title: Linkage disequilibrum network analysis (LDna)
-Version: 0.56
+Version: 0.57
 Date: 2014-03-19
 Author: Petri Kemppainen <petrikemppainen2@gmail.com>
 Maintainer:  Petri Kemppainen <petrikemppainen2@gmail.com>
@@ -24,5 +24,6 @@ Description: Performs linkage disequilibrium networks analyses (LDna). In LD net
             results, both when extracting clusers and when exploring the extracted
             clusters.
 License: GPL (>= 2)
+URL: http://ldnetworkanalysis.wordpress.com
 VignetteBuilder: knitr 
 Suggests: knitr 
