bugfixes for mcapply

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,10 @@
-importFrom(ape, "read.tree", "plot.phylo", "drop.tip")
+#importFrom(ape, "read.tree", "plot.phylo", "drop.tip")
 
-importFrom(igraph, "decompose.graph", "V","E", "layout.fruchterman.reingold",
-          "plot.igraph", "print.igraph", "graph.edgelist")
+#importFrom(igraph, "decompose.graph", "V","E", "layout.fruchterman.reingold",
+#          "plot.igraph", "print.igraph", "graph.edgelist")
+
+#importFrom(multicore, "decompose.graph", "V","E", "layout.fruchterman.reingold",
+#          "plot.igraph", "print.igraph", "graph.edgelist")
+
 
 export(LDnaRaw, extractClusters, summaryLDna, plotLDnetwork)
