--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.57
 Date: 2014-03-19
 Author: Petri Kemppainen <petrikemppainen2@gmail.com>
 Maintainer:  Petri Kemppainen <petrikemppainen2@gmail.com>
-Depends: R (>= 3.0.2), ape, igraph
+Depends: R (>= 3.0.2), ape, igraph, parallel
 Imports: ape, igraph
 Description: Performs linkage disequilibrium networks analyses (LDna). In LD networks
             nodes represent loci and connections between nodes represent LD values
