--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
 Package: LDna
 Type: Package
 Title: Linkage disequilibrum network analysis (LDna)
-Version: 0.60
+Version: 0.61
 Date: 2014-03-19
 Author: Petri Kemppainen <petrikemppainen2@gmail.com>
 Maintainer: Petri Kemppainen <petrikemppainen2@gmail.com>
 Depends:
     R (>= 3.0.2),
     ape,
-    igraph
+    igraph,
+    data.table,
+    SNPRelate,
+    formatR,
+    stats
 Imports:
     parallel
 Description: R package for linkage disequilibrium (LD) network analysis (LDna).
@@ -31,3 +35,4 @@ URL: http://ldnetworkanalysis.wordpress.com,
 VignetteBuilder: knitr
 Suggests:
     knitr
+RoxygenNote: 6.0.1
