--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 importFrom(parallel, "mclapply")
 importFrom(igraph, "graph.adjacency")
-export(LDnaRaw, extractClusters, summaryLDna, plotLDnetwork, LDnClustering)
+export(LDnaRaw, extractClusters, summaryLDna, plotLDnetwork, LDnClustering, LDnClusteringOld, emmax_group)
