--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: Petri Kemppainen <petrikemppainen2@gmail.com>
 Depends:
     R (>= 3.0.2),
     igraph,
-    data.table
+    data.table,
+    phyclust
 Imports:
     SNPRelate,
     parallel,
