--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,23 @@
 Package: LDna
 Type: Package
+Encoding: UTF-8
 Title: Linkage disequilibrum network analysis (LDna)
-Version: 0.64
+Version: 0.652
 Date: 2014-03-19
 Author: Petri Kemppainen <petrikemppainen2@gmail.com>
 Maintainer: Petri Kemppainen <petrikemppainen2@gmail.com>
 Depends:
-    R (>= 3.0.2),
+    R (>= 3.5.0),
     igraph,
     data.table,
-    phyclust
+    phyclust,
+    R.utils,
+    parallel,
+    stats,
+    graphics,
+    grDevices
 Imports:
     SNPRelate,
-    parallel,
     ape
 Description: R package for linkage disequilibrium (LD) network analysis (LDna).
     In LD networks nodes represent loci and connections between nodes represent
@@ -34,4 +39,4 @@ URL: http://ldnetworkanalysis.wordpress.com,
 VignetteBuilder: knitr
 Suggests:
     knitr
-RoxygenNote: 6.0.1
+RoxygenNote: 7.1.0
